# Clawchan-Intelligence-Agency

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json
.github/workflows/: ci-cd.yml
backend/cpp/: CMakeLists.txt
backend/elixir/: mix.exs
backend/go/: go.mod  main.go
backend/java/: pom.xml
backend/nodejs/: package.json
backend/nodejs/src/: server.ts
backend/nodejs/src/graphql/: resolvers.ts  schema.ts
backend/nodejs/src/middleware/: auth.ts  metrics.ts
backend/nodejs/src/routes/: aircraft.ts  crypto.ts  earthquakes.ts  satellites.ts  weather.ts
backend/nodejs/src/services/: aircraft.ts  alerts.ts  crypto.ts  earthquakes.ts  satellites.ts  weather.ts
backend/nodejs/src/utils/: logger.ts
backend/python/: Dockerfile  requirements.txt
backend/python/src/: main.py
backend/rust/: Cargo.toml
backend/rust/src/: main.rs
docs/api/: README.md
docs/presentations/: clawchan-architecture.pptx.html  clawchan-outline.json  clawchan-terminal.pptx.html  clawchan-visual-design.md
frontend/: package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: aircraft.ts  crypto.ts  earthquakes.ts  index.ts  satellites.ts  weather.ts
frontend/src/components/: AlertSystem.tsx  DashboardLayout.tsx  Globe3D.tsx  IntelligencePanel.tsx  ModuleSelector.tsx  StatusBar.tsx
frontend/src/components/panels/: AircraftPanel.tsx  BroadcastPanel.tsx  FinancialPanel.tsx  GeophysicalPanel.tsx  GlobalIntelPanel.tsx  MaritimePanel.tsx  SatellitePanel.tsx  SecurityPanel.tsx  SigintPanel.tsx  WeatherPanel.tsx
frontend/src/components/widgets/: AircraftWidget.tsx  CryptoWidget.tsx  GlobeWidget.tsx  MaritimeWidget.tsx  MarketWidget.tsx  NewsWidget.tsx  SatelliteWidget.tsx  SecurityWidget.tsx  SeismicWidget.tsx  SigintWidget.tsx  WeatherWidget.tsx  index.ts
frontend/src/hooks/: index.ts  useAircraft.ts  useLocalStorage.ts  useSatellites.ts  useWebSocket.ts
frontend/src/store/: dashboardStore.ts
frontend/src/styles/: index.css
infra/docker/: docker-compose.yml
infra/kubernetes/base/: frontend-deployment.yaml
infra/terraform/: main.tf
tests/unit/frontend/components/: Globe.test.tsx
